Add CRUD controllers, authentication, and EF Core setup
- Added `BatchController.cs` for CRUD operations on `Batch` entity.
- Added `InventaryController.cs` for product-batch retrieval.
- Added `ProductController.cs` for CRUD operations on `Product` entity.
- Added `UserController.cs` for user authentication with JWT.
- Removed `WeatherForecastController.cs`.
- Added `ProductDTO.cs` for `Product` data transfer object.
- Added `AppDbContext.cs` for EF Core context and seeding.
- Added `Batch.cs`, `Product.cs`, and `User.cs` entity definitions.
- Added initial migration files for database schema and seeding.
- Added `AppDbContextModelSnapshot` for model definitions and seed data.
- Introduced `LoginUser` class for user login data.
- Updated `Program.cs` for CORS and JWT authentication setup.
- Added middleware for authentication and CORS in `Program.cs`.
- Updated `StoreApi.csproj` with new package references.
- Removed `WeatherForecast` class.
- Updated `appsettings.json` with DB connection strings and JWT settings.

--- a/StoreApi/appsettings.json
+++ b/StoreApi/appsettings.json
@@ -1,9 +1,17 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=VANILLA\\SQLEXPRESS;;Database=store;Trusted_Connection=SSPI;TrustServerCertificate=True"
+    },
+    "Jwt": {
+        "SecretKey": "s3cUr3L0ngR@nd0mKey123456789012345",
+        "Issuer": "issuer",
+        "Audience": "audience"
+    },
+    "AllowedHosts": "*"
 }
